[package]
name = "nova-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unused = "allow"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.34"
chrono-tz = "0.8.4"
libc = "0.2"
phf = { version = "0.11.2", features = ["macros"] }
reverse_geocoder = "4.0.0"
tokio = "1.36.0"
