# Swiss Ephemeris Rust Library, a core library wrapping the Swiss Ephemeris library for astrological use.
# Copyright (C) 2024 Mike Verducci

[package]
name = "swiss-ephemeris-lib"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unused = "allow"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.34"
chrono-tz = "0.8.4"
geocoding = "0.4.0"
google-geocode = "0.1.5"
lazy_static = "1.4.0"
libc = "0.2"
phf = { version = "0.11.2", features = ["macros"] }
reverse_geocoder = "4.0.0"
serde = "1.0.196"
tokio = "1.36.0"
tzf-rs = "0.4.5"
