# Swiss Ephemeris Rust Library, a core library wrapping the Swiss Ephemeris library for astrological use.
# Copyright (C) 2024 Mike Verducci

[package]
name = "swiss-ephemeris-lib"
version = "0.5.2"
edition = "2021"

[lints.rust]
unused = "allow"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.34"
chrono-tz = "0.8.4"
geocoding = "0.4.0"
lazy_static = "1.4.0"
libc = "0.2"
phf = { version = "0.11.2", features = ["macros"] }
reverse_geocoder = "4.0.0"
serde = "1.0.196"
tokio = "1.36.0"
tzf-rs = "0.4.5"

[patch.crates-io]
# https://github.com/sdd/kiddo/issues/154
generator = { git = "https://github.com/Xudong-Huang/generator-rs", rev = "e3f16af" }